--- a/test/test.html
+++ b/test/test.html
@@ -15,6 +15,7 @@
 		<!-- libs -->
 		<script src="../lib/DataView/DataView.js"></script>
 		<script src="../lib/io/stream.js"></script>
+		<script src="../lib/io/load.js"></script>
 		
 		<!-- js scipts to test -->
 		<script src="../src/runtime/pe.js"></script>
